--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "bootstrap": "^5.1.3",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "nodemon": "^2.0.15",
     "sequelize": "^6.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
