--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "bootstrap": "^5.1.3",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "sequelize": "^6.9.0"
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.15.0",
+    "sequelize-cli": "^6.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
