--- a/.sequelizerc
+++ b/.sequelizerc
@@ -4,5 +4,5 @@ module.exports = {
     config: path.resolve('./database/config', 'config.js'),
     'models-path': path.resolve('./database/models'),
     'seeders-path': path.resolve('./database/seeders'),
-    'migrations-path': path.resolve('./database/migrations'),
+    'migrations-path': path.resolve('./database/models/migrations'),
 }
