--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.0",
     "body-parser": "^1.19.0",
-    "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mysql2": "^2.3.3",
