--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.15.0",
     "sequelize-cli": "^6.4.1"
