--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "mysql2": "^2.3.3",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.15.0",
     "sequelize-cli": "^6.4.1"
   },
